# agent-guard-plugins

./: .gitignore  AGENTS.md  CHANGELOG.md  CONTRIBUTING.md  CONTRIBUTING_PLAN.md  LICENSE  README.md  SECURITY.md  pyproject.toml
.agents/plugins/: marketplace.json
.claude-plugin/: marketplace.json
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  publish-pypi.yml
claude-code-plugin/: README.md
claude-code-plugin/.claude-plugin/: plugin.json
claude-code-plugin/hooks/: agent-guard-hook.sh  hooks.json
codex-plugin/: README.md
codex-plugin/.codex-plugin/: plugin.json
codex-plugin/hooks/: agent-guard-hook.sh  hooks.json
examples/: auto_wiring_guard.py  claude_guard.py  custom_guard.py  hermes_guard.py  openai_guard.py  openclaw_guard.py
openclaw-plugin/: README.md  index.mjs  openclaw.plugin.json  package.json
openclaw-plugin/test/: plugin.test.mjs
src/agent_guard_plugins/: __init__.py  content_guard.py  core.py
src/agent_guard_plugins/dashboard/: app.py
src/agent_guard_plugins/integrations/: __init__.py  claude.py  cli_hook_bridge.py  codex_install.py  hermes.py  hermes_plugin.py  openai_codex.py  openclaw.py  openclaw_bridge.py
tests/: conftest.py  test_basic.py  test_cli_hook_bridge.py  test_content_guard.py  test_dashboard.py  test_e2e_claude.py  test_e2e_claude_plugin.py  test_e2e_codex.py  test_e2e_codex_hook.py  test_e2e_hermes.py  test_e2e_hermes_plugin.py  test_e2e_openclaw.py  test_guard_core.py  test_hermes_plugin.py  test_integrations.py  test_openclaw_bridge.py
tests/e2e_results/: KNOWN_GAPS.md  claude_cli_shim.py  claude_e2e.json  codex_e2e.json  hermes_e2e.json  openclaw_e2e.json  openclaw_python_side.json
tests/e2e_results/claude_plugin/: claude_plugin_e2e.json  run_claude_plugin_e2e.py
tests/e2e_results/codex_hook/: codex_hook_e2e.json  run_codex_hook_e2e.py
tests/e2e_results/codex_wrapper/: codex-guarded
tests/e2e_results/hermes_plugin/: hermes_plugin_e2e.json  run_hermes_plugin_e2e.py
tests/e2e_results/hermes_pod/: pod_setup.sh  run_hermes_e2e.py
tests/e2e_results/openclaw_plugin/: agent-guard-openclaw-plugin.mjs  run-openclaw-e2e.mjs
