[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-guard-plugins"
version = "0.1.0"
description = "Drop-in prompt-injection guards for Claude, OpenAI Codex, Hermes, and OpenCLAW agents. Uses dannyliv/agent-guard-modernbert-base on Hugging Face."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "dannyliv"}]
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Intended Audience :: Developers",
]
dependencies = [
    "torch>=2.0",
    "transformers>=4.48",
    "peft>=0.10",
    "huggingface_hub>=0.20",
]

[project.optional-dependencies]
onnx = ["onnxruntime>=1.16", "optimum[onnxruntime]>=1.20"]
claude = ["anthropic>=0.30"]
openai = ["openai>=1.40"]
dashboard = ["flask>=3.0"]
all = ["onnxruntime>=1.16", "optimum[onnxruntime]>=1.20", "anthropic>=0.30", "openai>=1.40", "flask>=3.0"]

[project.urls]
Models = "https://huggingface.co/dannyliv/agent-guard-modernbert-base"
Issues = "https://github.com/dannyliv/agent-guard-plugins/issues"

[project.scripts]
agent-guard-dashboard = "agent_guard_plugins.dashboard.app:main"

[tool.setuptools.packages.find]
where = ["src"]
