[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-guard-plugins"
version = "0.1.2"
description = "Drop-in prompt-injection guards for Claude, OpenAI Codex, Hermes, and OpenCLAW agents. Wraps the agent-guard-modernbert-base and agent-guard-deberta-pi-base classifiers on Hugging Face."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "dannyliv"}]
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Intended Audience :: Developers",
]
dependencies = [
    "torch>=2.0",
    "transformers>=4.48",
    "peft>=0.10",
    "huggingface_hub>=0.20",
]

[project.optional-dependencies]
# Pick one of the two classifier models. Each extra pulls only the deps
# that model needs. Install both together if you want to A/B them.
modernbert = []  # ModernBERT tokenizer ships with transformers, no extra dep.
deberta = ["sentencepiece>=0.1.99"]  # DeBERTa-v3 uses a SentencePiece tokenizer.

# Platform integrations.
onnx = ["onnxruntime>=1.16", "optimum[onnxruntime]>=1.20"]
claude = ["anthropic>=0.30"]
openai = ["openai>=1.40"]
dashboard = ["flask>=3.0"]
all = [
    "sentencepiece>=0.1.99",
    "onnxruntime>=1.16",
    "optimum[onnxruntime]>=1.20",
    "anthropic>=0.30",
    "openai>=1.40",
    "flask>=3.0",
]

[project.urls]
Models = "https://huggingface.co/dannyliv/agent-guard-modernbert-base"
Issues = "https://github.com/dannyliv/agent-guard-plugins/issues"

[project.scripts]
agent-guard-dashboard = "agent_guard_plugins.dashboard.app:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: exercises the real Hugging Face classifier (model download / load).",
    "e2e: real end-to-end test against a live platform runtime (OpenCLAW, Claude, Codex, Hermes). Excluded from the default suite; needs the platform installed. See tests/test_e2e_*.py docstrings.",
]
