[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "agent-guard-plugins"
version = "0.5.0"
description = "Drop-in prompt-injection guards for Claude, OpenAI Codex, Hermes, and OpenCLAW agents. Wraps the agent-guard-modernbert-base and agent-guard-deberta-pi-base classifiers on Hugging Face."
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [{name = "dannyliv"}]
requires-python = ">=3.10"
classifiers = [
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Intended Audience :: Developers",
]
dependencies = [
    "torch>=2.0",
    "transformers>=4.48",
    "peft>=0.10",
    "huggingface_hub>=0.20",
    "tomli; python_version < \"3.11\"",
]

[project.optional-dependencies]
# Pick one of the two classifier models. Each extra pulls only the deps
# that model needs. Install both together if you want to A/B them.
modernbert = []  # ModernBERT tokenizer ships with transformers, no extra dep.
deberta = ["sentencepiece>=0.1.99"]  # DeBERTa-v3 uses a SentencePiece tokenizer.

# Platform integrations.
onnx = ["onnxruntime>=1.16", "optimum[onnxruntime]>=1.20"]
claude = ["anthropic>=0.30"]
openai = ["openai>=1.40"]
dashboard = ["flask>=3.0"]
all = [
    "sentencepiece>=0.1.99",
    "onnxruntime>=1.16",
    "optimum[onnxruntime]>=1.20",
    "anthropic>=0.30",
    "openai>=1.40",
    "flask>=3.0",
]

[project.urls]
Models = "https://huggingface.co/dannyliv/agent-guard-modernbert-base"
Issues = "https://github.com/dannyliv/agent-guard-plugins/issues"

[project.scripts]
agent-guard-dashboard = "agent_guard_plugins.dashboard.app:main"
# JSON bridge spawned by the OpenCLAW (Node.js) plugin: reads one tool-call
# payload on stdin, writes one Content Guard verdict to stdout.
agent-guard-openclaw = "agent_guard_plugins.integrations.openclaw_bridge:main"
# PreToolUse bridge spawned by the Claude Code plugin and the Codex hook:
# reads one PreToolUse event on stdin, writes one decision to stdout.
agent-guard-cli-hook = "agent_guard_plugins.integrations.cli_hook_bridge:main"
# One-line installer for the OpenAI Codex CLI PreToolUse hook (~/.codex).
agent-guard-codex-install = "agent_guard_plugins.integrations.codex_install:main"
# Installer for the Hermes Agent directory plugin (~/.hermes/plugins).
agent-guard-hermes-install = "agent_guard_plugins.integrations.hermes_plugin:main"

# Hermes Agent discovers pip-installed plugins via this entry-point group.
# Once agent-guard-plugins is installed, `hermes plugins enable agent-guard`
# activates automatic pre_tool_call screening — no directory install needed.
[project.entry-points."hermes_agent.plugins"]
agent-guard = "agent_guard_plugins.integrations.hermes_plugin"

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "slow: exercises the real Hugging Face classifier (model download / load).",
    "e2e: real end-to-end test against a live platform runtime (OpenCLAW, Claude, Codex, Hermes). Excluded from the default suite; needs the platform installed. See tests/test_e2e_*.py docstrings.",
]
